--- a/requirements.txt
+++ b/requirements.txt
@@ -18,12 +18,13 @@ Jinja2==3.1.5
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+motor==3.6.1
 packaging==24.2
 pluggy==1.5.0
 pydantic==2.10.5
 pydantic_core==2.27.2
 Pygments==2.19.1
-pymongo==4.10.1
+pymongo==4.9.2
 pytest==8.3.4
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
